--- a/Trillo/starter/sass/main.scss
+++ b/Trillo/starter/sass/main.scss
@@ -14,6 +14,9 @@
     --color-grey-dark-3: #999;
 
     --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
+    --shadow-light: 0 2rem 5rem rgba(black, .06);
+
+    --line: 1px solid var(--color-grey-light-2);
 }
 
 * {
@@ -56,7 +59,7 @@ body {
     font-size: 1.4rem;
     height: 7rem;
     background-color: #FFF;
-    border-bottom: 1px solid var(--color-grey-light-2);
+    border-bottom: var(--line);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -76,7 +79,27 @@ body {
 
 .hotel-view {
     background-color: #FFF;
-    min-height: 80rem;
+    flex: 1;
+}
+
+.detail {
+    display: flex;
+    padding: 4.5rem;
+    background-color: var(--color-grey-light-1);
+    border-bottom: var(--line);
+}   
+
+.description {
+    font-size: 1.4rem;
+    background-color: #FFF;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    flex: 0 0 60%;
+    margin-right: 4.5rem;
+}
+
+.user-reviews {
+    background-color: green;
     flex: 1;
 }
 
@@ -260,7 +283,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid var(--color-grey-light-2);
+    border-bottom: var(--line);
 
     &__heading {
         font-size: 2.25rem;
@@ -335,6 +358,69 @@ body {
         animation: pulsate 1s infinite;
     }
 }
+
+.paragraph:not(:last-of-type) {
+    margin-bottom: 2rem;
+}
+
+.list {
+    list-style: none;
+    margin: 3rem 0;
+    padding: 3rem 0;
+    border-top: var(--line);
+    border-bottom: var(--line);
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
+    &__item {
+        flex: 0 0 50%;
+        margin-bottom: .7rem;
+    }
+
+    &__item::before {
+        content: "";
+        display: inline-block;
+        height: 1rem;
+        width: 1rem;
+        margin-right: .7rem;
+        background-color: var(--color-primary);
+        -webkit-mask-image: url(../img/chevron-thin-right.svg);
+        mask-image: url(../img/chevron-thin-right.svg);
+        -webkit-mask-size: cover;
+        mask-size: cover;
+    }
+ }
+
+ .recommend {
+    font-size: 1.3rem;
+    color: var(--color-grey-dark-3);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    &__count {
+
+    }
+
+    &__friends {
+
+    }
+
+    &__photo {
+        box-sizing: content-box;
+        height: 4rem;
+        width: 4rem;
+        border-radius: 50%;
+        border: 3px solid #FFF;
+
+        &:not(:last-child) {
+            margin-right: -1.5rem;
+        }
+    }
+
+   
+ }
 
 @keyframes pulsate {
     0% {
